test/fail/actor-alias-dup.mo
//MOC-FLAG --actor-env-alias a MY_CANISTER some/path.did
//MOC-FLAG --actor-alias a em77e-bvlzu-aq
